// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformations 1`] = `
{
  "displayName": "Alejandro D Gonzalez",
  "email": "mock-email",
  "externalId": "agonzalez123",
  "fullName": {
    "givenNames": "Alejandro",
    "middleNames": "D",
    "surname": "Gonzalez",
  },
  "hasOutliers": true,
  "pseudonymizedId": "hashed-agonzalez123",
  "supervisionLocationForListPage": "Region 1",
  "supervisionLocationForSupervisorPage": "Unit 1",
}
`;

exports[`transformations 2`] = `
{
  "displayName": "David Lee",
  "email": null,
  "externalId": "dlee456",
  "fullName": {
    "givenNames": "David",
    "surname": "Lee",
  },
  "hasOutliers": true,
  "pseudonymizedId": "hashed-dlee456",
  "supervisionLocationForListPage": "Region 2",
  "supervisionLocationForSupervisorPage": "Unit 1",
}
`;

exports[`transformations 3`] = `
{
  "displayName": "Rosa Smith",
  "email": "mock-email",
  "externalId": "rsmith789",
  "fullName": {
    "givenNames": "Rosa",
    "surname": "Smith",
  },
  "hasOutliers": true,
  "pseudonymizedId": "hashed-rsmith789",
  "supervisionLocationForListPage": "Region 1",
  "supervisionLocationForSupervisorPage": "Unit 1",
}
`;

exports[`transformations 4`] = `
{
  "displayName": "Charles Thomas",
  "email": null,
  "externalId": "cthomas321",
  "fullName": {
    "givenNames": "Charles",
    "surname": "Thomas",
  },
  "hasOutliers": false,
  "pseudonymizedId": "hashed-cthomas321",
  "supervisionLocationForListPage": "Region 2",
  "supervisionLocationForSupervisorPage": null,
}
`;

exports[`transformations 5`] = `
{
  "displayName": "Cora Matterson",
  "email": null,
  "externalId": "cmatterson567",
  "fullName": {
    "givenNames": "Cora",
    "surname": "Matterson",
  },
  "hasOutliers": false,
  "pseudonymizedId": "hashed-cmatterson567",
  "supervisionLocationForListPage": "N/A",
  "supervisionLocationForSupervisorPage": null,
}
`;

exports[`transformations 6`] = `
{
  "displayName": "Jared Williams",
  "email": null,
  "externalId": "jwilliams345",
  "fullName": {
    "givenNames": "Jared",
    "surname": "Williams",
  },
  "hasOutliers": false,
  "pseudonymizedId": "hashed-jwilliams345",
  "supervisionLocationForListPage": null,
  "supervisionLocationForSupervisorPage": "N/A",
}
`;
